--- a/Pages/Authentication/Authentication.css
+++ b/Pages/Authentication/Authentication.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100%;
 }
 .auth-heading {
     display: flex;
