refactored CL broken code

--- a/Pages/Authentication/Authentication.css
+++ b/Pages/Authentication/Authentication.css
@@ -1,5 +1,11 @@
 @import url(../../index.css);
 
+html{
+    height: 100%;
+}
+body {
+    height: 100%;
+}
 .auth-section {
     display: flex;
     flex-direction: column;
